Perkin-UAT/force-app/main/default/objects/Month_Territory_Target__c/Month_Territory_Target__c.object-meta.xml
<CustomObject>
    <label>Month Territory Target</label>
    <nameField>
        <displayFormat>MTTN-{0000}</displayFormat>
        <label>Month Territory Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Month Territory Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>