Perkin-UAT/force-app/main/default/objects/Month_Territory_Target__c/fields/Closed_Lost_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Opportunities__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Closed Lost Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>