Perkin-UAT/force-app/main/default/objects/Month_Territory_Target__c/fields/Forecast_Base_Target_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Base_Target_Achievement__c</fullName>
    <formula>IF (Total_Forecast_Revenue__c = 0, 0, (  Total_Forecast_Revenue__c  / Base_Target__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Base Target Achievement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>