Perkin-UAT/force-app/main/default/objects/Month_Territory_Target__c/fields/MTT__c.field-meta.xml
<CustomField>
    <fullName>MTT__c</fullName>
    <formula>Territory_Name__c &amp;
&quot;-&quot; &amp;
TEXT( Year__c ) &amp; 
&quot;-&quot; &amp;
RIGHT(TEXT(Month__c), 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MTT</label>
    <type>Text</type>
</CustomField>