Perkin-UAT/force-app/main/default/objects/Month_Territory_Target__c/fields/Stretch_Target_Variance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Stretch_Target_Variance_Amount__c</fullName>
    <formula>Won_Revenue_Stretch__c  - Stretch_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stretch Target Variance Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>