Perkin-UAT/force-app/main/default/objects/Month_Territory_Target__c/fields/Territory_Level_10__c.field-meta.xml
<CustomField>
    <fullName>Territory_Level_10__c</fullName>
    <label>Territory Level 10</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Territory_Level_9__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Philippines EH Team Members</fullName>
            </value>
            <value>
                <fullName>EH EU India Petro Sub Region 1 Leader</fullName>
            </value>
            <value>
                <fullName>EH EU India South Central Sub Region 1 Leader</fullName>
            </value>
            <value>
                <fullName>EH EU India West Sub Region 1 Leader</fullName>
            </value>
            <value>
                <fullName>Asturias &amp; Leon</fullName>
            </value>
            <value>
                <fullName>Galicia &amp; Alejandro</fullName>
            </value>
            <value>
                <fullName>EH EGB2 Sales Team North</fullName>
            </value>
            <value>
                <fullName>EH EGB2 Sales Team South</fullName>
            </value>
            <value>
                <fullName>EIT EH Lombardy Team Chrom</fullName>
            </value>
            <value>
                <fullName>EIT EH Lombardy Team INORG</fullName>
            </value>
            <value>
                <fullName>EIT EH Lombardy Team MatChar</fullName>
            </value>
            <value>
                <fullName>EIT EH North East Team Chrom</fullName>
            </value>
            <value>
                <fullName>EIT EH North East Team Inorg</fullName>
            </value>
            <value>
                <fullName>EIT EH North East Team MatChar</fullName>
            </value>
            <value>
                <fullName>EIT EH North West Team Chrom</fullName>
            </value>
            <value>
                <fullName>EIT EH North West Team Inorg</fullName>
            </value>
            <value>
                <fullName>EIT EH North West Team MatChar</fullName>
            </value>
            <value>
                <fullName>EIT EH South Team Chrom</fullName>
            </value>
            <value>
                <fullName>EIT EH South Team INORG</fullName>
            </value>
            <value>
                <fullName>EIT EH South Team MatChar</fullName>
            </value>
            <value>
                <fullName>EAT2 BIO Reagents Sales Team</fullName>
            </value>
            <value>
                <fullName>ECH2 BIO Reagents Sales Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>