Perkin-UAT/force-app/main/default/objects/Month_Territory_Target__c/fields/Territory_Level_11__c.field-meta.xml
<CustomField>
    <fullName>Territory_Level_11__c</fullName>
    <label>Territory Level 11</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Territory_Level_10__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>EH EU India Petro Sub Region 1 Sales Team</fullName>
            </value>
            <value>
                <fullName>EH EU India South Central Sub Region 1 Sales Team</fullName>
            </value>
            <value>
                <fullName>EH EU India West Sub Region 1 Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>