Perkin-UAT/force-app/main/default/objects/Month_Territory_Target__c/fields/Territory_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Territory_Level_2__c</fullName>
    <label>Territory Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Territory_Level_1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>LAS President - Global</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>