Perkin-UAT/force-app/main/default/objects/Month_Territory_Target__c/listViews/UAT_Month_Territory_Targets.listView-meta.xml
<ListView>
    <fullName>UAT_Month_Territory_Targets</fullName>
    <columns>NAME</columns>
    <columns>Territory_Name__c</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>Base_Target__c</columns>
    <columns>Stretch_Target__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>11/5/2015 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Gary Smith Partnership</value>
    </filters>
    <label>UAT Month Territory Targets</label>
    <language>en_US</language>
</ListView>